# Radial-Menu-Builder-for-Plasticity

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  setup.bat
.github/workflows/: main.yml
src-tauri/: Cargo.toml  app.entitlements  tauri.conf.json
src-tauri/capabilities/: radial.json
src-tauri/icons/: FoxIcon.icns
src-tauri/src/: main.rs
