[package]
name = "radial-menu-builder"
version = "0.1.0"
description = "A Tauri App for building radial menus"
authors = ["you"]
license = ""
repository = ""
default-run = "radial-menu-builder"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [
  "dialog-ask",
  "dialog-confirm", 
  "dialog-message",
  "dialog-open",
  "dialog-save",
  "fs-all",
  "path-all",
  "shell-open",
  "window-close",
  "window-hide",
  "window-maximize",
  "window-minimize",
  "window-show",
  "window-start-dragging",
  "window-unmaximize",
  "window-unminimize"
] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
