[package]
name = "radial-menu-builder"
version = "0.1.0"
description = "A Tauri App for building radial menus"
authors = ["you"]
license = ""
repository = ""
default-run = "radial-menu-builder"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = ["shell-open"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]